snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
bf816bd59010e31ae033327cff991222